<resources>
    <string name="app_name">Symbol KT</string>
    <string name="stock_name">%s</string>
    <string name="stock_type">%s</string>
    <string name="stock_symbol">%s</string>
    <string name="api_key">c7ke93iad3i9q0uqoa70</string>
    <string name="search">search</string>
    <string name="sv_hint_search_query">Search ticker or company name</string>
    <string name="tv_stock_result">Search ticker or company name</string>
    <string name="tv_result_empty">Could not find results for %s</string>
    <string name="stock_fragment_title">Stocks</string>
    <string name="stock_fragment_details_title">Stock Details</string>
    <!-- Stock Details -->
    <string name="stock_result_description">Description: %s</string>
    <string name="stock_result_ticker">Ticker: %s</string>
    <string name="stock_result_type">Type: %s</string>
    <string name="show_more">Show More</string>
</resources>